// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The component should render 1`] = `
<button
  class="displayValue"
>
  <div
    aria-label="My value"
    class="croppedText"
    title="My value"
  >
    <div
      class="whole"
    >
      My value
    </div>
    <div
      aria-hidden="true"
      class="front"
    >
      My v
    </div>
    <div
      aria-hidden="true"
      class="back"
    >
      <span>
        alue
      </span>
    </div>
  </div>
  <span
    aria-hidden="true"
    class="toggle fa fa-chevron-down"
  />
</button>
`;

exports[`The component should render with an icon 1`] = `
<button
  class="displayValue hasIcon"
>
  <span
    aria-hidden="true"
    class="frontIcon fa fa-plus"
  />
  <div
    aria-label="My value"
    class="croppedText"
    title="My value"
  >
    <div
      class="whole"
    >
      My value
    </div>
    <div
      aria-hidden="true"
      class="front"
    >
      My v
    </div>
    <div
      aria-hidden="true"
      class="back"
    >
      <span>
        alue
      </span>
    </div>
  </div>
  <span
    aria-hidden="true"
    class="toggle fa fa-chevron-down"
  />
</button>
`;
